# terminol

./: Cargo.toml  README.md
.github/workflows/: lint.yml
src/: cmds.rs  colors.rs  draw.rs  lib.rs
src/draw/: containers.rs  line.rs
